# hydroponics

./: .gitignore  DhtSensor.py  LightModule.py  LightSensor.py  Logger.py  MainLoop.py  Module.py  PeristalticPump.py  PhSensor.py  README.md  Sensor.py  SyringePump.py  TdsSensor.py  airflow_camera.py  airflow_feeding.py  airflow_filtering.py  airflow_humidity.py  airflow_light.py  airflow_ph_managment.py  airflow_temperature.py  airflow_water_level_managment.py  atomize.py  data.json  dht11.py  modules.py  pyproject.toml  sensor.py  sensor_conditions.py  sensor_dht.py  sensor_light.py  setup.py  simplyPlantation.py  syrigne_pumps_control.py  tds&ph_read.py  tsl2591.py  webserver.py
arduinoSoft/: DosingQueue.h  Pump.cpp  Pump.h  arduinoSoft.ino  dosingQueue.cpp
dags/: airflow_camera.py  airflow_humidity.py  airflow_light.py  airflow_ph_management.py  airflow_tds.py  airflow_temperature.py  airflow_time.py
data-files/: README.txt  airflow_codes.json  airflow_indication_limits.json  airflow_modules.json  airflow_phase_duration.json  airflow_sensors_indications.json  airflow_time.txt  daily_light_cycle.json  indication_limits.json  modules.json  phase_duration.json
mainSoft/: Hydroponics.py  Logger.py  PeristalticPump.py  SyringePump.py  webserver.py
mainSoft/configs/: environment_parameters.json  program_parameters.json
mainSoft/modules/: LightModule.py
mainSoft/sensors/: DhtSensor.py  LightSensor.py  PhSensor.py  Sensor.py  TdsSensor.py
simple scripts/: atomize.py  dht11.py  humidity_read.py  temperature_read.py  tsl2591.py
