[tool.poetry]
name = "hydroponics"
version = "0.0.1"
description = "Application for managing a hydroponic plantation"
authors = []

[tool.poetry.dependencies]
python = "~3.9.1"
pydantic = "==1.8.1"
gpiozero = "==1.6.2"
Kivy = "==2.0.0"
adafruit-circuitpython-dht = "==3.6.1"
libgpiod2 = "=="

[tool.poetry.dev-dependencies]
# code quality
#black = "==20.8b1"
#isort = "==5.8.0"
#flake8 = "==3.9.0"
#flake8-isort = "==4.0.0"
#pre-commit = "^2.11.1"

[build-system]
requires = ["poetry>=1.1.5"]
